[gd_scene load_steps=6 format=3 uid="uid://81o2p7dx8df1"]

[ext_resource type="Script" path="res://Scripts/World/MiniGame.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://b3e58asnly37p" path="res://Images/MiniGames/ArcadeBg.png" id="2"]
[ext_resource type="Texture2D" uid="uid://djyglqnandpm4" path="res://Images/MiniGames/xbutton/xbuttonpressed.png" id="3"]
[ext_resource type="Texture2D" uid="uid://dcon6757m7bqn" path="res://Images/MiniGames/xbutton/xbuttonnormal.png" id="4"]
[ext_resource type="BitMap" uid="uid://ohohhxkaj76w" path="res://Images/MiniGames/xbutton/clickmask.png" id="5"]

[node name="Minigame" type="Node2D"]
script = ExtResource("1")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ArcadeBg" type="Sprite2D" parent="CanvasLayer"]
texture = ExtResource("2")
centered = false

[node name="ExitButton" type="TextureButton" parent="CanvasLayer"]
texture_filter = 4
offset_left = 1551.0
offset_top = 842.0
offset_right = 1801.0
offset_bottom = 1092.0
texture_normal = ExtResource("4")
texture_pressed = ExtResource("3")
texture_click_mask = ExtResource("5")

[connection signal="button_up" from="CanvasLayer/ExitButton" to="." method="_on_ExitButton_button_up"]
